ML-AgentV02 Trained, Oct16

--- a/.gitignore
+++ b/.gitignore
@@ -100,12 +100,12 @@ InitTestScene*.unity*
 
 
 # Output Artifacts
-/results
+#/results
 # Output Builds
 /Builds
 
 # Training environments
-/envs
+#/envs
 
 # Environemnt logfile
 *Project.log
